fix header and images not showing

--- a/aboutme.css
+++ b/aboutme.css
@@ -1,5 +1,5 @@
 .container-fluid {
-  font-size: 30pt;
+  font-size: 20pt;
   margin-right: 200px;
 }
 
